# plugins2

./: .gitignore  PLUGIN_BUILD_CHECKLIST.md  build-nova-silk-linux.sh
.github/: workflows
.github/workflows/: build-nova-aura-macos.yml  build-nova-clean-macos.yml  build-nova-clean-windows.yml  build-nova-clip-macos.yml  build-nova-console-macos.yml  build-nova-curve-macos.yml  build-nova-curve-windows.yml  build-nova-delay-macos.yml  build-nova-harmony-macos.yml  build-nova-heat-macos.yml  build-nova-heat-windows.yml  build-nova-level-macos.yml  build-nova-level-windows.yml  build-nova-master-macos.yml  build-nova-master-windows.yml  build-nova-pitch-macos.yml  build-nova-silk-macos.yml  build-nova-silk-windows.yml  build-nova-tone-macos.yml  build-nova-tone-windows.yml  build-nova-tune-macos.yml  build-nova-voice-macos.yml  build-space-by-nova-macos.yml  build-space-by-nova-windows.yml
Nova Aura/: CMakeLists.txt  status.json
Nova Aura/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Aura/Source/ui/public/: index.html
Nova Aura/Source/ui/public/js/: index.js
Nova Clean/: .build-trigger  CMakeLists.txt
Nova Clean/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Clean/Source/ui/public/: index.html
Nova Clean/Source/ui/public/js/: fallback-boot.js  index.js
Nova Clip/: CMakeLists.txt  status.json
Nova Clip/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Clip/Source/ui/public/: index.html
Nova Clip/Source/ui/public/js/: index.js
Nova Console/: CMakeLists.txt  VALIDATION_CHECKLIST.md  index-backup.html  status.json
Nova Console/Design/: index.html  v1-test.html
Nova Console/Source/: NovaConsoleAutomationStressTest.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Console/Source/presets/: test_presets.json
Nova Console/Source/ui/public/: index-fresh.html  index.CHECKPOINT-LASTGOOD.html  index.RECOVERED-NovaCurveEQ.html  index.html  knob-showcase.html  meter-gallery.html  meter-showcase.html
Nova Curve/: CMakeLists.txt
Nova Curve/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Curve/Source/ui/public/: index.html
Nova Curve/Source/ui/public/js/: index.js
Nova Delay/: CMakeLists.txt
Nova Delay/Design/: v1-ui-spec.md
Nova Delay/Documentation/: USER_MANUAL.html  USER_MANUAL.md
Nova Delay/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Delay/Source/ui/public/: index.html
Nova Delay/Source/ui/public/js/: index.js
Nova Harmony/: CMakeLists.txt  status.json
Nova Harmony/Design/: preview-capture.xwd  v1-style-guide.md  v1-test.html
Nova Harmony/Documentation/: NOVA_HARMONY_TEXTURE_VALIDATION_CHECKLIST.txt
Nova Harmony/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Harmony/Source/ui/public/: index.html
Nova Heat/: CMakeLists.txt  status.json
Nova Heat/Design/: v1-test.html  v1-ui-spec.md
Nova Heat/Documentation/: USER_MANUAL.html  USER_MANUAL.md  USER_MANUAL_PDF_READY.html
Nova Heat/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Heat/Source/ui/public/: index.html
Nova Heat/_state_backups/: status_backup_20260404_193308.json
Nova Level/: CMakeLists.txt  README.md  status.json
Nova Level/Source/: CreatePluginFilter.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Level/Source/ui/public/: index.html
Nova Master/: CMakeLists.txt  status.json
Nova Master/Design/: v1-style-guide.md  v1-ui-spec.md
Nova Master/Documentation/: USER_MANUAL.html  USER_MANUAL.md  USER_MANUAL_PDF_READY.html
Nova Master/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Master/Source/ui/public/: index.html
Nova Pitch/: CMakeLists.txt
Nova Pitch/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Pitch/Source/ui/public/: index.html
Nova Pitch/Source/ui/public/js/: fallback-boot.js  index.js
Nova Pitch/Source/ui/public/js/juce/: check_native_interop.js  index.js
Nova Pitch/Tools/: diag_regression_gate.py
Nova Silk/: CMakeLists.txt  status.json
Nova Silk/Design/: v1-test.html  v2-test.html
Nova Silk/Documentation/: USER_MANUAL.html  USER_MANUAL.md  USER_MANUAL_PDF_READY.html
Nova Silk/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Silk/Source/ui/public/: index.html
Nova Silk/Source/ui/public/js/: index.js
Nova Tone/: CMakeLists.txt  status.json
Nova Tone/Design/: v1-style-guide.md  v1-test.html
Nova Tone/Documentation/: USER_MANUAL_PDF_READY.html
Nova Tone/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Tone/Source/ui/public/: index.html
Nova Tone/Source/ui/public/js/: index.js
Nova Tune/: CMakeLists.txt  status.json
Nova Tune/Design/: v1-test.html  v2-test.html
Nova Tune/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Tune/Source/ui/public/: index.html
Nova Tune/Source/ui/public/js/: fallback-boot.js  index.js
Nova Voice/: CMakeLists.txt  status.json
Nova Voice/Documentation/: USER_MANUAL.html  USER_MANUAL.md  USER_MANUAL_PDF_READY.html
Nova Voice/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Nova Voice/Source/ui/public/: index.html
Nova Voice/Source/ui/public/js/: fallback-boot.js  index.js
Space By Nova/: CMakeLists.txt  status.json
Space By Nova/Design/: index.html  v1-spectral-preview.html  v1-style-guide.md  v1-test.html  v1-ui-spec.md
Space By Nova/Documentation/: USER_MANUAL.html  USER_MANUAL.md  USER_MANUAL_PDF_READY.html
Space By Nova/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Space By Nova/Source/ui/public/: index.html
Space By Nova/Source/ui/public/js/: index.js
(+3 files in other folders)
